# papercraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.cpp  format.json  main.cpp
demo/: gravity.h
include/: EasyXBase.h  SkiaPaperBase.h  String.h
include/assets/: AssetManager.h
include/event/: Event.h
include/game/: Block.h  BlockMap.h  Game.h
include/game/blocks/: Block.h  LightSourceBlock.h  LightSourceComponent.h
include/game/chunk/: Chunk.h  ChunkSerialization.h  IChunkProvider.h  Section.h
include/game/component/: CollisionComponent.h  CollisionReactionComponent.h  Component.h  LightSourceComponent.h  Object.h  PVelocityComponent.h  PauseCollisionComponent.h  VelocityComponent.h
include/game/entity/: BehaviorTree.h  BehaviorTreeIUpdatable.h  Entity.h  IUpdatable.h  PlayerIUpdatable.h
include/game/manager/: BlockIDMapManager.h  BlockManager.h  CollisionManager.h
include/game/object/: Object.h
include/gui/: Button.h  GUIManager.h  GUIObject.h  ImageLabel.h  Input.h  ProgressBar.h  TextLabel.h
include/launcher/: Launcher.h
include/mic/: MCIManager.h
include/renderer/: BlendRender.h  BlockRender.h  BloomRender.h  Camera.h  LightRenderer.h  Renderer.h  Shader.h
include/singleton/: Singleton.h
shaders/: lighting.sksl
shaders/pipeline/: Blend.sksl  Bloom.sksl  LightMask.sksl
source/: EasyXBase.cpp  SkiaPaperBase.cpp  String.cpp
source/assets/: AssetManager.cpp
source/entity/: Entity.cpp
source/game/: Block.cpp  Game.cpp
source/game/blocks/: Block.cpp
source/game/chunk/: Chunk.cpp  ChunkSerialization.cpp  Section.cpp
source/game/component/: CollisionComponent.cpp  CollisionReactionComponent.cpp  Component.cpp  Object.cpp  PauseCollisionComponent.cpp  VelocityComponent.cpp
source/game/entity/: Entity.cpp  PlayerIUpdatable.cpp
source/game/manager/: BlockIDMapManager.cpp  BlockManager.cpp  CollisionManager.cpp
source/gui/: Button.cpp  GUIManager.cpp  GUIObject.cpp  ImageLabel.cpp  Input.cpp  ProgressBar.cpp  TextLabel.cpp
source/launcher/: Launcher.cpp
source/mic/: MCIManager.cpp
source/renderer/: BlendRender.cpp  BlockRender.cpp  BloomRender.cpp  Camera.cpp  LightRenderer.cpp  Renderer.cpp  Shader.cpp
tester/: TestBlockCombinationRendering.cpp  TestLightMaskRendering.cpp
